PictureLab/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_101\bin\javadoc.exe
-author
-version
-nodeprecated
-private
-tag
pre:a:Precondition:
-tag
post:a:Postcondition:
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;\\sd203.org\dfs-root$\HS\NCHS\Students\NALitman\APCS\bookClasses;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\nalitman\Desktop\GitHub\New-Pict-repo\PictureLab
-d
C:\Users\nalitman\Desktop\GitHub\New-Pict-repo\PictureLab\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\nalitman\Desktop\GitHub\New-Pict-repo\PictureLab\ColorLab.java
<---- end of javadoc command ---->
Loading source file C:\Users\nalitman\Desktop\GitHub\New-Pict-repo\PictureLab\ColorLab.java...
C:\Users\nalitman\Desktop\GitHub\New-Pict-repo\PictureLab\ColorLab.java:248: error: ';' expected
           pixelObj.setGreen(pixelObj.setRed())
                                               ^
C:\Users\nalitman\Desktop\GitHub\New-Pict-repo\PictureLab\ColorLab.java:266: error: ';' expected
        p14.explore()
                     ^
2 errors
